hildon-application-manager (1:2.2.21~unreleased) unstable; urgency=low

  [ Gabriel Schulhof ]
  * Make maemo-launcher binaries only if "nolauncher" flag is absent from DEB_BUILD_OPTIONS

  [ Marius Vollmer ]
  * Fixes: NB#117616 - Application manager, spelling error in category name "System".
  
 -- Marius Vollmer <marius.vollmer@nokia.com>  Fri, 14 May 2009 12:50:00 +0100	
	
hildon-application-manager (1:2.2.20-1) unstable; urgency=low

  * Fixes: NB#113743 wrong banner is shown when trying to save log file into
  read-only memory card. 
  * Fixes: NB#116290 The sections needs to be in two columns and finger-sized
  not thumb-sized.

 -- Marius Vollmer <marius.vollmer@nokia.com>  Fri, 14 May 2009 12:43:00 +0100	

hildon-application-manager (1:2.2.20) unstable; urgency=low

  * Fixes: NB#114920 Blinking icon disappears on opening the Status Menu and
  does not reappear for the next update.
  * Fixes: NB#113654 Context sensitive menus are still shown.
  * Fixes: NB#112804 Update view menu to Hildon 2.2
  * Fixes: NB#103611 Download info not does not appear if connection is lost
  in middle of download 
  * Fixes: NB#115004 "Application list partially refreshed. Some catalogues
  unavailable. Check catalogue details" info note appears on opening
  Installable / updatable view
  * Fixes: NB#115100 Search option enabled from Application Menu
  * Fixes: NB#114937 Update Icon appears on every operation after Push
  Interval value set to 1 min 

 -- Marius Vollmer <marius.vollmer@nokia.com>  Fri, 13 May 2009 11:51:00 +0100

hildon-application-manager (1:2.2.19) unstable; urgency=low
  
  * Fixes: NB#103998 Catalogue list behaving strangely and not giving
  catalogue list partilly refreshed info note
  * Fixes: NB#111866 Failed catalogue dialog is not opening
  * Implemented SSU must reflash page in details dialogue.
	
 -- Marius Vollmer <marius.vollmer@nokia.com>  Fri, 29 Apr 2009 19:28:00 +0100

hildon-application-manager (1:2.2.18) unstable; urgency=low
